--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: test@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   An awesome description for your new site here.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://localhost:4000" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
